--- a/.dockerignore
+++ b/.dockerignore
@@ -6,8 +6,24 @@ __pycache__/
 .git/
 .gitignore
 .cursor/
-*.md
+README.md
+PLAN.md
+LEARNING.md
+INSTALL.md
 instance/
 .env
 .env.*
 *.db
+frontend/node_modules/
+frontend/dist/
+dist/
+build/
+*.spec
+fly.toml
+.github/
+backend/tests/
+backend/requirements-dev.txt
+seeds.py
+run.py
+build.bat
+build.sh
