--- a/fly.toml
+++ b/fly.toml
@@ -21,3 +21,7 @@ primary_region = 'yyz'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 256
+
+[mounts]
+  source      = "financialtracker_data"
+  destination = "/data"
